# licence-plate-detection-service

./: .templatesyncignore  Dockerfile  README.md  coverage.xml  development.Dockerfile  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements.txt
src/: main.py  my_service.py
tests/: test_list_io_contract.py
